@@ -43,8 +43,9 @@ if { [istarget "sparclet-*-*"] } {
 }
 
 if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug additional_flags=-w}] != "" } {
-     gdb_suppress_entire_file "Testcase compile failed, so all tests in this file will automatically fail."
-    }
+    untested "couldn't compile ${srcdir}/${subdir}/${srcfile}"
+    return -1
+}
 
 
 
